# nexus

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: docs.yml
docs/: SUMMARY.md  introduction.md  why.md
docs/model/: generations.md  layers.md  mechanism-and-policy.md  namespaces.md  store.md
docs/paths/: boot.md  run.md
docs/reference/: api.md  configuration.md  errors.md  layout.md  vocab.md
docs/subsystems/: backends.md  cgroups.md  control.md  probing.md  sandbox.md
src/: core.rs  lib.rs  paths.rs  tmp.rs  trace.rs  vocab.rs
src/api/: err.rs  flags.rs  hooks.rs  layer.rs  libc.rs  mod.rs  mounts.rs  resources.rs  sandbox.rs  store.rs
src/control/: mod.rs  proto.rs  serve.rs
src/exec/: exec.rs  launch.rs  mod.rs
src/init/: early.rs  handoff.rs  health.rs  mod.rs  reaper.rs  select.rs  signals.rs
src/mount/: global.rs  mod.rs
src/ns/: build.rs  mod.rs  pin.rs  reg.rs
src/state/: layer.rs  mod.rs  system.rs
src/store/: cas.rs  erofs.rs  generations.rs  mod.rs  overlay.rs
src/sys/: caps.rs  cgroup.rs  mod.rs  mount.rs  nsproc.rs  probe.rs  proc.rs  sandbox.rs  userns.rs
