[package]
# published as nexus-core (the crate name `nexus` is taken on crates.io);
# the library is still imported as `nexus` via [lib] name below
name = "nexus-core"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "metadistribution core"
license = "GPL-2.0"

[dependencies]
blake3 = "1"
landlock = "0.4"
libc = "0.2"
rustix = { version = "1.1", features = ["mount", "thread", "process", "fs"] }
seccompiler = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "1"

[features]
trace = []

[lib]
name = "nexus"
path = "src/lib.rs"

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
